<resources>
    <string name="app_name">Marching Buddy</string>
    <string name="left_to_right">Left To Right</string>
    <string name="steps">0.0 Steps</string>
    <string name="on">On</string>
    <string name="inside">In</string>
    <string name="outside">Out</string>
    <string name="side_1">Side 1</string>
    <string name="side_2">Side 2</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="yardline">50 Yard Line</string>
    <string name="front_to_back">Front To Back</string>
    <string name="in_front">In Front</string>
    <string name="behind">Behind</string>
    <string name="front">Front</string>
    <string name="back">Back</string>
    <string name="home">Home</string>
    <string name="visitor">Visitor</string>
    <string name="hash">Hash</string>
    <string name="sideline">Sideline</string>
    <string name="next">Next</string>
    <string name="review">Review</string>
    <string name="counts">Counts</string>
    <string name="calculate">Calculate</string>
    <string name="find_next">Find Next</string>
    <string name="find_next_using_end_as_start">Find Next Using End</string>
    <string name="result">Result</string>
    <string name="start_point">Start Point:</string>
    <string name="end_point">End Point:</string>
    <string name="settings">Settings</string>
    <string name="start_point_review">Start Point</string>
    <string name="end_point_review">End Point</string>
    <string name="_1_counts">1 Count</string>
    <string name="counts_title">Counts</string>
    <string name="midpoint">Midpoint</string>
    <string name="copy_end_point_to_start_point">Copy End Point to Start Point</string>
    <string name="step_size">Step Size</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Strings related to Settings -->

    <string-array name="pref_field_type">
        <item>High School</item>
        <item>NCAA / College</item>
    </string-array>

    <string-array name="pref_field_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_hash_type">
        <item>Front / Back</item>
        <item>Home / Visitor</item>
    </string-array>

    <string-array name="pref_hash_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_side_type">
        <item>Side 1 / Side 2</item>
        <item>Left / Right</item>
    </string-array>

    <string-array name="pref_side_type_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string-array name="pref_specificity">
        <item>No Rounding</item>
        <item>Nearest 1/2 Step</item>
        <item>Nearest 1/4 Step</item>
        <item>Nearest 1/8 Step</item>
        <item>Nearest 1/16 Step</item>
        <item>Nearest 1/32 Step</item>
    </string-array>

    <string-array name="pref_specificity_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
