<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".StartFragment">

    <TextView
        android:id="@+id/textLeftToRight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="false"
        android:text="@string/left_to_right"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editStepsLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textLeftToRight"
        android:ems="3"
        android:inputType="numberDecimal"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textStepsFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editStepsLR"
        android:layout_alignBottom="@+id/editStepsLR"
        android:layout_toEndOf="@+id/editStepsLR"
        android:layout_toRightOf="@+id/editStepsLR"
        android:text="@string/steps"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupOnInOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/radioGroupSides"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textLeftToRight"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/on"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioInside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/inside"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioOutside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outside"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupSides"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editStepsLR"
        android:layout_marginTop="16dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioSide1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/side_1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioSide2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/side_2"
            android:textSize="18sp" />
    </RadioGroup>

    <EditText
        android:id="@+id/editYardline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroupSides"
        android:layout_marginLeft="18dp"
        android:layout_marginStart="18dp"
        android:layout_toEndOf="@+id/radioGroupSides"
        android:layout_toRightOf="@+id/radioGroupSides"
        android:ems="3"
        android:inputType="number"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textYardline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editYardline"
        android:layout_alignBottom="@+id/editYardline"
        android:layout_marginLeft="14dp"
        android:layout_marginStart="14dp"
        android:layout_toEndOf="@+id/editYardline"
        android:layout_toRightOf="@+id/editYardline"
        android:text="@string/yardline"
        android:textSize="18sp" />

    <Space
        android:id="@+id/space"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editYardline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/textFrontToBack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/space"
        android:gravity="center"
        android:text="@string/front_to_back"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editStepsFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textFrontToBack"
        android:ems="3"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textStepsLR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/editStepsFB"
        android:layout_alignBottom="@+id/editStepsFB"
        android:layout_toEndOf="@+id/editStepsFB"
        android:layout_toRightOf="@+id/editStepsFB"
        android:text="@string/steps"
        android:textSize="18sp" />

    <RadioGroup
        android:id="@+id/radioGroupOnFrontBehind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editStepsFB"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textFrontToBack"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioOnHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/on"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioInFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/in_front"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBehind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/behind"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupFrontBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editStepsFB"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioFront"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/front"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textSize="18sp" />
    </RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroupHashSideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/radioGroupFrontBack"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/radioHash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/hash"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/radioSideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sideline"
            android:textSize="18sp" />
    </RadioGroup>

    <Button
        android:id="@+id/buttonPart1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radioGroupFrontBack"
        android:layout_gravity="bottom"
        android:text="@string/next" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="28dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:max="4"
        android:progress="1" />

</RelativeLayout>